--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <!-- link to style.css -->
   <link rel="stylesheet" href="styles.css">
+
   <!-- link to bootstrap -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
   <!-- google font -->
@@ -58,19 +59,19 @@
           <div class="left">
             <section class="service-description">
               <img src="./assets/services_icons/design_icon.png" alt=""  class="services-icon" id="design-icon">
-              <h6 class="pt-3 ">DESIGN</h6>
+              <h6 class="pt-3 text-center">DESIGN</h6>
             </section>
-            <p class=" text-dark" id='text-content-design'>Our design pracrice</p>
+            <p class=" text-dark text-content" id='text-content-design'>Our design practice Offers to Ful Range of Services including brand strategy, interaction and visual design and User Experience Testing Throughout your project, our designers create and implement visual design and workflows, request user feedback and work with you to make sure what gets built is what is needed.            </p>
 
            
           </div>
           <!-- middle -->
           <div class="middle">
-            <section class="service-description">
+            <section class="service-description text-center">
               <img src="./assets/services_icons/dev_icon.png" alt="" class="services-icon  " id="development-icon" >
               <h6 class="pt-3">DEVELOPMENT</h6>
             </section>
-            <p class="text-dark" id='text-content-dev'>lol</p> 
+            <p class="text-dark text-content text-center" id='text-content-dev'>All engineers are fluent in the latest enterprise, mobie and web development technoiogies They collatborate with your team to write, and improve code on a daily basis, usng proven practices such as test-driven development and pair programming.</p> 
 
                   
           </div>
@@ -79,9 +80,9 @@
             <section class="service-description">
               <img src="./assets/services_icons/product_icon.png" alt="" class="services-icon " id="PM-icon">
 
-              <h6 class="pt-3">PRODUCT MANAGEMENT</h6>
+              <h6 class="pt-3 text-center">PRODUCT MANAGEMENT</h6>
             </section>
-            <p class="text-dark" id='text-content-product'>hey</p>
+            <p class="text-dark text-content" id='text-content-product'>Planning and development is iterative. Because we are constantly coding and testing, the products we buld are ahays ready to go live. This iterative process allows for changes as business requirements evolve.            </p>
 
           </div>
 
@@ -91,12 +92,14 @@
           <h4 class="text-center py-4">PORTFOLIO</h4>
 
           <section class="container">
+
             <div class="row py-4 ">
-              <img src="./assets/portfolio/work4.jpg" alt=""class="col-lg-3 col-sm pt-4" >
+             <img src="./assets/portfolio/work4.jpg" alt=""class="col-lg-3 col-sm pt-4 img">
              <img src="./assets/portfolio/work3.jpg" alt="" class="col-lg-3 col-sm pt-4">
              <img src="./assets/portfolio/work2.jpg" alt="" class="col-lg-3 col-sm pt-4">
              <img src="./assets/portfolio/work1.jpg" alt="" class="col-lg-3 col-sm pt-4">
            </div>
+
            <div class="row py-4">
              <img src="./assets/portfolio/work5.jpg" alt="" class="col-lg-3 col-sm pt-4">
              <img src="./assets/portfolio/work6.jpg" alt="" class="col-lg-3 col-sm pt-4">
@@ -110,21 +113,22 @@
       </div>
     </main>
     <footer>
-      <!-- form -->
-      <div class=" container-fluid form-section bg-light my-5">
-        <h4 class="py-4 text-light">CONTACT US</h4>
-        <!-- form section -->
-        <form action="" class="d-flex flex-column justify-content-center align-items-center gap-3 py-4 ">
-       <section class="d-flex gap-4 flex-column flex-lg-row input ">
-         <input type="text" class="name "  placeholder="Name...">
-         <input type="text" class="email" placeholder="Email...">
+
+      <div class=" container-fluid form-section  my-5">
+        <h4 class="py-4 text-light ">CONTACT US</h4>
+
+        <form action="https://github.us20.list-manage.com/subscribe/post?u=e946620edc5d35e6c74eb2674&amp;id=e000f2c4de" method="post"  target="_blank"  class="container-fluid d-flex flex-column justify-content-center align-items-center gap-3 ">
+       <section class="d-flex gap-4 flex-column flex-lg-row input justify-content-center align-items-center ">
+         <input type="text"  placeholder="Name..." name="FNAME" class="name"">
+         <input type="text" placeholder="Email..." name="EMAIL"">
        </section>
-         <textarea name="message" id="message" cols="30" rows="10" class="w-50"></textarea>
-        
+         <textarea id="message" cols="30" rows="10" class="" name="MESSAGE"></textarea>
+         <input type="submit"  id ="submit" class=" bg-dark mb-5 text-light border-dark py-1 ">
         </form>
 
-      </div>
 
+      </div> 
+  
       <div class=" container social-section d-flex justify-content-center ">
         <div class="row row-cols-md-3 ">
         <img src="./assets/social_icons/twitter.png" alt="" >
@@ -155,6 +159,8 @@
  </div>
 
 
+ <script type='text/javascript' src='//s3.amazonaws.com/downloads.mailchimp.com/js/mc-validate.js'></script>
+ <script type='text/javascript'>(function($) {window.fnames = new Array(); window.ftypes = new Array();fnames[0]='EMAIL';ftypes[0]='email';fnames[1]='FNAME';ftypes[1]='text';}(jQuery));var $mcj = jQuery.noConflict(true);</script>
 
   <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
   <script src="main.js"></script>
